--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>I'm a Dedicated and detail-oriented Web Designer aspirant. I’m Eager to learn new technologies and skills regarding the
-        Web Development And Designing field. Looking forward to achieving and excelling in strong foundations..</p>
+        <p>Enthusiastic web developer and data analyst with hands-on experience in tech and design industries.
+          Skilled in HTML, CSS, JavaScript, and data analysis with a strong focus on improving team collaboration. 
+          Quick learner eager to utilize skills in web design and data insights for professional growth.</p>
       </div><!-- End Section Title -->
 
       <div class="container " data-aos="fade-up" data-aos-delay="100" >
@@ -99,8 +100,13 @@
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-            Looking forward to make a Carrer in Web Development Field as either Web Developer or Web Designer. Currently I'm Pursuing UI/UX
-            course from Tech Mahindra Smart Academy Foundation as a Trainee.
+            
+            Developed responsive web layouts with HTML, CSS, and JavaScript, enhancing site functionality.
+            Implemented Bootstrap and API integration for seamless website performance.
+            Designed user-friendly application interfaces using Figma to improve user engagement.
+            Conducted comprehensive data analysis to provide actionable business insights.
+            Created detailed reports and visualizations to support data-driven decision-making.
+         
             </p>
             <div class="row">
               <div class="col-lg-6">
